feat: refractor templates to suggestions
