# openapi/index-openapi.yaml
@@ -245,30 +245,6 @@ paths:
                 $ref: "#/components/schemas/List"
         '400':
           description: Invalid request body (see response message)
-  /lists/template:
-    get:
-      tags:
-        - lists
-      operationId: 'get-list-template'
-      responses:
-        '200':
-          description: A list template that contains a name and a color
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ListTemplate"
-  /lists/template/colors:
-    get:
-      tags:
-        - lists
-      operationId: 'get-list-template-colors'
-      responses:
-        '200':
-          description: A list of default colors usable for lists
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ListTemplateColors"
   /lists/{listId}:
     parameters:
       - name: listId
@@ -492,6 +468,42 @@ paths:
       responses:
         '200':
           description: Item deleted
+  /suggestions/colors:
+    get:
+      tags:
+        - suggestions
+      operationId: 'get-colors-suggestion'
+      responses:
+        '200':
+          description: A list of nice looking colors
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuggestionColors"
+  /suggestions/list-names:
+    get:
+      tags:
+        - suggestions
+      operationId: 'get-list-names-suggestion'
+      responses:
+        '200':
+          description: A list of good sounding list names
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuggestionListNames"
+  /suggestions/template/list:
+    get:
+      tags:
+        - suggestions
+      operationId: 'get-list-suggestion-template'
+      responses:
+        '200':
+          description: A list template that contains a name and a color
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuggestionListTemplate"
   /ws:
     get:
       tags:
@@ -553,14 +565,25 @@ components:
         color:
           type: string
           format: '#RRGGBB'
-    ListTemplate:
+    SuggestionListTemplate:
       type: object
       properties:
         name:
           type: string
         color:
           type: string
-    ListTemplateColors:
+    SuggestionListNames:
+      type: object
+      properties:
+        _id:
+          type: string
+        description:
+          type: string
+        names:
+          type: array
+          items:
+            type: string
+    SuggestionColors:
       type: object
       properties:
         _id:
