# src/main/kotlin/app/index_it/models/suggestions/ListNameSuggestionsDto.kt
@@ -1,4 +1,4 @@
-package app.index_it.models.templates
+package app.index_it.models.suggestions
 
 import kotlinx.serialization.Contextual
 import kotlinx.serialization.SerialName
@@ -8,8 +8,8 @@ import org.litote.kmongo.Id
 import org.litote.kmongo.id.toId
 
 @Serializable
-data class ListNamesDto(
-    @Contextual @SerialName("_id") val id: Id<ListNamesDto> = ObjectId().toId(),
+data class ListNameSuggestionsDto(
+    @Contextual @SerialName("_id") val id: Id<ListNameSuggestionsDto> = ObjectId().toId(),
     val description: String,
     val names: List<String>
 )
